--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+
 <div class="navbar">
 	<div class="navbar-inner navbar-fixed-top">
 		<div class="container">
@@ -19,6 +20,8 @@
 </div>
 
 <div class="container">
+	<p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
 	<%= yield %>
 </div>
 
